# LLM

NN Layers/Linear Layer/: ll.cu
transformer_cuda/: CMakeLists.txt  main.cu
transformer_cuda/attention/attention/: attention.cu  attention.h
transformer_cuda/attention/multihead/: multihead.cu  multihead.h
transformer_cuda/attention/qkv/: qkv.cu  qkv.h
transformer_cuda/kernels/gelu/: gelu.h
transformer_cuda/kernels/relu/: relu.h
transformer_cuda/kernels/softmax/: softmax.cu  softmax.h
transformer_cuda/layers/: embedding.cu  embedding.h
transformer_cuda/layers/embeddings/: embedding.cu  embedding.h
transformer_cuda/layers/feedforward/: ffn.cu  ffn.h
transformer_cuda/layers/fused_embedding/: fused_embedding.cu  fused_embedding.h
transformer_cuda/layers/gelu/: gelu.cu  gelu.h
transformer_cuda/layers/layernorm/: layernorm.cu  layernorm.h
transformer_cuda/layers/positional encoding/: positional_encoding.cu  positional_encoding.h
transformer_cuda/layers/relu/: relu.cu
transformer_cuda/layers/residual add/: residual_add.cu  residual_add.h
transformer_cuda/layers/residual_add/: residual_add.cu  residual_add.h
transformer_cuda/model/transformer/: transformer.cu  transformer.h
transformer_cuda/model/transformer_block/: transformer_block.cu  transformer_block.h
transformer_cuda/tensor/: main.cu  tensor.cu  tensor.h
